crates/oxc_angular_compiler/tests/snapshots/integration_test__conditional_alias_with_listener.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Conditional_0_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,"\n  ");
    i0.ɵɵelementStart(1,"button",0);
    i0.ɵɵlistener("click",function TestComponent_Conditional_0_Template_button_click_1_listener($event) {
      const parent_r2 = i0.ɵɵrestoreView(_r1);
      const ctx_r2 = i0.ɵɵnextContext();
      return i0.ɵɵresetView(ctx_r2.viewOption(parent_r2,$event));
    });
    i0.ɵɵtext(2,"Click me");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵconditionalCreate(0,TestComponent_Conditional_0_Template,4,0); }
  if ((rf & 2)) {
    let tmp_0_0;
    i0.ɵɵconditional(((tmp_0_0 = ctx.getParent(ctx.renderedOptions))? 0: -1),tmp_0_0);
  }
}
