crates/oxc_angular_compiler/tests/snapshots/integration_test__element_with_text.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1,"Hello World");
    i0.ɵɵelementEnd();
  }
}
