crates/oxc_angular_compiler/tests/snapshots/integration_test__empty_template.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
}
