crates/oxc_angular_compiler/tests/snapshots/integration_test__event_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"button",0);
    i0.ɵɵlistener("click",function TestComponent_Template_button_click_0_listener() {
      return ctx.handleClick();
    });
    i0.ɵɵelementEnd();
  }
}
