crates/oxc_angular_compiler/tests/snapshots/integration_test__event_with_event_object.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"input",0);
    i0.ɵɵlistener("input",function TestComponent_Template_input_input_0_listener($event) {
      return ctx.handleInput($event);
    });
    i0.ɵɵelementEnd();
  }
}
